Done with sql server configuration

--- a/eTickets/appsettings.json
+++ b/eTickets/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Data Source=DESKTOP-VALQL16\\MSSQLSERVER01;Initial Catalog=ecommerce-app-db;Integrated Security=True;Pooling=False"
+  },
   "AllowedHosts": "*"
 }
